--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ h6 {
   z-index: 997;
   transition: all 0.5s;
   padding: 16px 0;
-  background: #213b52;
+  background: #447367;
 }
 
 #header .logo h1 {
@@ -162,12 +162,12 @@ h6 {
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #213b52;
+  background: #124b37;
   color: #fff;
   padding: 4px 25px 6px 25px;
   margin-left: 30px;
   border-radius: 50px;
-  border: 2px solid #fdc134;
+  border: 2px solid #ffbd59;
 }
 
 .navbar .getstarted:hover,
@@ -363,7 +363,7 @@ h6 {
   width: 100%;
   padding: 0 0 0 0;
   background: #47749c;
-  background: linear-gradient(180deg, #556b7e 0%, rgb(46, 86, 121) 35%, rgb(34, 78, 114) 100%);
+  background: linear-gradient(180deg, #447367 0%, rgb(38, 121, 142 ) 35%, rgb(255, 193, 114) 100%);
 }
 
 #hero h1 {
@@ -807,7 +807,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(26, 46, 64, 0.85);
+  background: rgba(68, 115, 103, 0.85);
   z-index: 1;
 }
 
@@ -905,6 +905,7 @@ section {
   border-top: 1px solid #1a2e40;
   z-index: 2;
   position: relative;
+  align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -912,6 +913,12 @@ section {
 #footer .copyright {
   text-align: center;
   float: left;
+}
+
+#footer .nenemilogo{
+  float: center;
+  width: 30px;
+  height: auto;
 }
 
 #footer .credits {
